ajout ref local schema.org

--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
+	<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "LocalBusiness",
+		  "image":"https://morganhel.github.io/PROJET_9/assets/images/nina.webp"
+		  "name": "Nina Carducci Photographe",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "telephone": "0556677889",
+		  "contactPoint": {
+			"@type": "ContactPoint",
+			"telephone": "0556677889",
+			"contactType": "Service client",
+			"hoursAvailable": {
+			  "@type": "OpeningHoursSpecification",
+			  "dayOfWeek": [
+				"Lundi",
+				"Mardi",
+				"Mercredi",
+				"Jeudi",
+				"Vendredi"
+			  ],
+			  "opens": "10:00",
+			  "closes": "19:00"
+			}
+		  }
+		}
+	</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
