ajout balise meta rs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
+	
+	<meta property="og:title" content="Nina Carducci, photographe">
+	<meta property="og:description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
+	<meta property="og:image" content="https://morganhel.github.io/PROJET_9/assets/images/nina.webp">
+	<meta property="og:url" content="https://morganhel.github.io/PROJET_9/">
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Nina Carducci, photographe">
+	<meta name="twitter:description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
+	<meta name="twitter:image" content="https://morganhel.github.io/PROJET_9/assets/images/nina.webp">
+
+	<meta property="og:title" content="Nina Carducci, photographe">
+	<meta property="og:description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
+	<meta property="og:image" content="https://morganhel.github.io/PROJET_9/assets/images/nina.webp">
+	<meta property="og:url" content="https://morganhel.github.io/PROJET_9/">
+	<meta name="twitter:card" content="summary_large_image">
+	
 	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
