changement format + redimension + compression images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<li><a href="#gallery">Galerie</a></li>
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webpnina.png" alt="logo instagram"></a></li>
+				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -202,7 +202,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webpnina.webp" alt="appareil photo">
+					<img src="./assets/images/camera.webp" alt="appareil photo">
 				</div>
 			</div>
 		</section>
