--- a/index.html
+++ b/index.html
@@ -89,13 +89,27 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="homme marchant sur un passage piéton">
+					<img 
+					srcset="./assets/images/slider/responsive-mobile/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 750w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w"
+					sizes="(max-width: 767.98px) 750px, 1920px" 
+					class="d-block w-100" 
+					alt="homme marchant sur un passage piéton">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="personnes s'amusant dans la fosse d'un concert" loading="lazy">
+					<img
+					srcset="./assets/images/slider/responsive-mobile/nicholas-green-nPz8akkUmDI-unsplash.webp 750w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp 1920w"
+					sizes="(max-width: 767.98px) 750px, 1920px" 
+					class="d-block w-100"
+					alt="personnes s'amusant dans la fosse d'un concert"
+					loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="couple pour leur ouverture de bal de mariage" loading="lazy">
+					<img
+					srcset="./assets/images/slider/responsive-mobile/edward-cisneros-3_h6-1NPDGw-unsplash.webp 750w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1920w"
+					sizes="(max-width: 767.98px) 750px, 1920px" 
+					class="d-block w-100"
+					alt="couple pour leur ouverture de bal de mariage"
+					loading="lazy">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
