--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		{
 		  "@context": "http://schema.org",
 		  "@type": "LocalBusiness",
-		  "image":"https://morganhel.github.io/PROJET_9/assets/images/nina.webp"
-		  "name": "Nina Carducci Photographe",
+		  "image":"https://morganhel.github.io/PROJET_9/assets/images/nina.webp",
+		  "name": "Nina Carducci, Photographe",
 		  "address": {
 			"@type": "PostalAddress",
 			"streetAddress": "68 avenue Alsace-Lorraine",
