correction balise cite

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		
 		<blockquote  class="quote">
 			<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
-			<p class="quote__author">- Richard Avedon</p>
+			<cite class="quote__author">- Richard Avedon</cite>
 		</blockquote>
 		
 		<section id="services">
@@ -196,7 +196,7 @@
 
 		<blockquote class="quote">
 			<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
-			<p class="quote__author">- Richard Avedon</p>
+			<cite class="quote__author">- Richard Avedon</cite>
 		</blockquote>
 
 		<section id="contact">
