--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 	
 	<meta property="og:title" content="Nina Carducci, photographe">
 	<meta property="og:description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
-	<meta property="og:image" content="https://morganhel.github.io/PROJET_9/assets/images/nina.webp">
-	<meta property="og:url" content="https://morganhel.github.io/PROJET_9/">
+	<meta property="og:image" content="https://morganhel.github.io/ninacarducci/assets/images/nina.webp">
+	<meta property="og:url" content="https://morganhel.github.io/ninacarducci/">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Nina Carducci, photographe">
 	<meta name="twitter:description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
-	<meta name="twitter:image" content="https://morganhel.github.io/PROJET_9/assets/images/nina.webp">
+	<meta name="twitter:image" content="https://morganhel.github.io/ninacarducci/assets/images/nina.webp">
 
 	<meta property="og:title" content="Nina Carducci, photographe">
 	<meta property="og:description" content="Découvrez l'art captivant de la photographie à travers l'objectif de Nina Carducci, photographe basée à Bordeaux. Des images saisissantes et uniques qui immortalisent des moments inoubliables. Explorez son portfolio dès maintenant.">
-	<meta property="og:image" content="https://morganhel.github.io/PROJET_9/assets/images/nina.webp">
-	<meta property="og:url" content="https://morganhel.github.io/PROJET_9/">
+	<meta property="og:image" content="https://morganhel.github.io/ninacarducci/assets/images/nina.webp">
+	<meta property="og:url" content="https://morganhel.github.io/ninacarducci/">
 	<meta name="twitter:card" content="summary_large_image">
 	
 	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
 		  "@type": "LocalBusiness",
-		  "image":"https://morganhel.github.io/PROJET_9/assets/images/nina.webp",
+		  "image":"https://morganhel.github.io/ninacarducci/assets/images/nina.webp",
 		  "name": "Nina Carducci, Photographe",
 		  "address": {
 			"@type": "PostalAddress",
